# pixi-cookiecutter

./: .coveragerc  .envrc  .pre-commit-config.yaml  LICENSE  README.md  cookiecutter.json  notes.md  pyproject.toml  template_config.yml
.github/workflows/: test.yml
hooks/: post_gen_project.py  pre_gen_project.py
{{cookiecutter.package_name}}/: .coveragerc  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  pyproject.toml
{{cookiecutter.package_name}}/.github/workflows/: test.yml
{{cookiecutter.package_name}}/licenses/: apl-2.0  bsd-3-clause
{{cookiecutter.package_name}}/tests/: test_stub.py
{{cookiecutter.package_name}}/{{cookiecutter.package_name}}/: __init__.py  {{cookiecutter.package_name}}.py
